added sticky footer, optimized hero img, set viewport for mobile

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <link href="https://fonts.googleapis.com/css?family=Eczar:500|Work+Sans" rel="stylesheet">
   <title>Big Dawg Creative</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -24,9 +25,9 @@
   <main>
     <div  class="main-container">
       <div class="quote-flexbox">
-        <q><em>Big Dawg changed my life</em></q>
-        <q><em>My clients love our site, and it's been great that you're always accessible if I have any questions</em></q>
-      </div>  
+        <p><em>"Big Dawg changed my life"</em> -Michael Meehan</p>
+        <p><em>"My clients love our site, and it's been great that you're always accessible if I have any questions"</em> -CU Lending Solutions</p>
+      </div>
     </div>
   </main>
 
